contatct page update responsivnesss

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <body>
     <div class="topnav">
         <img src="Group 67.png" alt="Logo.png">
+        <div class="nav">
         <a class="inactive" href="#">Login</a> 
         <a class="active" href="#">Sign Up</a>
         <a id="clicked" href="#">CONTACT US</a>
         <a  href="#">BLOG</a> 
          <a  href="#">HOME</a>
+        </div>
     </div>
           <p class="contact" > Contact Us <br>
          <span> Home > Contact Us</span>
@@ -77,7 +79,6 @@
                         <!-- <img src="/w3images/team2.jpg" alt="Mike" style="width:100%"> -->
                         <div class="container">
                           <h4>RESPONSE LINKS</h4>
-                          <!-- <p class="title">Art Director</p> -->
                           <p><a href="">Support</a></p>
                           <p><a href="">Offers</a></p>
                           
